--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
+    "@gatsbyjs/reach-router": "^1.3.6",
     "@popperjs/core": "^2.11.0",
     "bootstrap": "^5.1.3",
     "gatsby": "^4.1.0",
@@ -42,6 +43,7 @@
     "react-switch": "^6.0.0",
     "react-tabs": "^3.2.3",
     "sass": "^1.43.4",
+    "styled-components": "^5.3.3",
     "validator": "^13.7.0"
   },
   "devDependencies": {
