--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-star-ratings": "^2.3.0",
     "react-switch": "^6.0.0",
     "react-tabs": "^3.2.3",
+    "react-use-file-upload": "^0.9.1",
     "sass": "^1.43.4",
     "validator": "^13.7.0"
   },
