--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-tabs": "^3.2.3",
     "react-use-file-upload": "^0.9.1",
     "sass": "^1.43.4",
+    "styled-components": "^5.3.3",
     "validator": "^13.7.0"
   },
   "devDependencies": {
