--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-switch": "^6.0.0",
     "react-tabs": "^3.2.3",
     "react-use-file-upload": "^0.9.1",
+    "react-webcam": "^6.0.0",
     "sass": "^1.43.4",
     "validator": "^13.7.0"
   },
