--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/react-fontawesome": "^0.1.16",
     "@popperjs/core": "^2.11.0",
     "bootstrap": "^5.1.3",
+    "echarts-for-react": "^3.0.2",
     "gatsby": "^4.1.0",
     "gatsby-plugin-apollo": "^3.0.2",
     "gatsby-plugin-gatsby-cloud": "^4.1.0",
