--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@popperjs/core": "^2.11.0",
     "bootstrap": "^5.1.3",
     "echarts-for-react": "^3.0.2",
+    "esm": "^3.2.25",
     "gatsby": "^4.1.0",
     "gatsby-plugin-apollo": "^3.0.2",
     "gatsby-plugin-gatsby-cloud": "^4.1.0",
