--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@gatsbyjs/reach-router": "^1.3.6",
     "@popperjs/core": "^2.11.0",
     "bootstrap": "^5.1.3",
+    "echarts": "^5.2.2",
+    "echarts-for-react": "^3.0.2",
     "gatsby": "^4.1.0",
     "gatsby-plugin-apollo": "^3.0.2",
     "gatsby-plugin-gatsby-cloud": "^4.1.0",
