--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "graphql": "^15.7.2",
     "isomorphic-fetch": "^3.0.0",
     "jquery": "^3.6.0",
+    "jwt-decode": "^3.1.2",
     "node-sass": "^6.0.1",
     "popper.js": "^1.16.1",
     "prop-types": "^15.7.2",
