--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-webcam": "^6.0.0",
     "sass": "^1.43.4",
     "styled-components": "^5.3.3",
+    "subscriptions-transport-ws": "^0.11.0",
     "validator": "^13.7.0"
   },
   "devDependencies": {
