--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/lab": "^5.0.0-alpha.61",
     "@mui/material": "^5.2.5",
     "@popperjs/core": "^2.11.0",
+    "babel-plugin-styled-components": "^2.0.2",
     "bootstrap": "^5.1.3",
     "echarts": "^5.2.2",
     "echarts-for-react": "^3.0.2",
@@ -30,6 +31,7 @@
     "gatsby-plugin-react-helmet": "^5.1.0",
     "gatsby-plugin-sass": "^5.1.0",
     "gatsby-plugin-sharp": "^4.1.0",
+    "gatsby-plugin-styled-components": "^5.4.0",
     "gatsby-source-filesystem": "^4.1.0",
     "gatsby-transformer-sharp": "^4.1.0",
     "graphql": "^15.7.2",
