phone number input

--- a/package.json
+++ b/package.json
@@ -49,8 +49,10 @@
     "react-dom": "^17.0.1",
     "react-fontawesome": "^1.7.1",
     "react-helmet": "^6.1.0",
+    "react-hook-form": "^7.22.5",
     "react-modal": "^3.14.4",
     "react-number-format": "^4.9.0",
+    "react-phone-number-input": "^3.1.44",
     "react-redux": "^7.2.6",
     "react-select": "^5.2.1",
     "react-star-ratings": "^2.3.0",
