--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "isomorphic-fetch": "^3.0.0",
     "jquery": "^3.6.0",
     "jwt-decode": "^3.1.2",
+    "lodash": "^4.17.21",
     "node-sass": "^6.0.1",
     "popper.js": "^1.16.1",
     "prop-types": "^15.7.2",
