--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bootstrap": "^5.1.3",
     "echarts": "^5.2.2",
     "echarts-for-react": "^3.0.2",
+    "ethers": "^5.5.3",
     "gatsby": "^4.1.0",
     "gatsby-plugin-apollo": "^3.0.2",
     "gatsby-plugin-gatsby-cloud": "^4.1.0",
@@ -71,7 +72,9 @@
     "styled-components": "^5.3.3",
     "subscriptions-transport-ws": "^0.11.0",
     "svg-to-dataurl": "^1.0.0",
-    "validator": "^13.7.0"
+    "util": "^0.12.4",
+    "validator": "^13.7.0",
+    "wagmi": "^0.1.2"
   },
   "devDependencies": {
     "prettier": "^2.4.1"
