--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "babel-plugin-styled-components": "^2.0.2",
     "base64-cryptocurrency-icons": "^1.1.17",
     "bootstrap": "^5.1.3",
+    "buffer": "^6.0.3",
     "echarts": "^5.2.2",
     "echarts-for-react": "^3.0.2",
     "ethers": "^5.5.3",
