--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "react-star-ratings": "^2.3.0",
     "react-switch": "^6.0.0",
     "react-tabs": "^3.2.3",
+    "react-tooltip": "^4.2.21",
     "react-use-file-upload": "^0.9.1",
     "react-use-websocket": "^2.9.1",
     "react-webcam": "^6.0.0",
