--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "rc-slider": "^9.7.4",
     "react": "^17.0.1",
     "react-copy-to-clipboard": "^5.0.4",
+    "react-currency-conv": "^1.1.0",
     "react-dom": "^17.0.1",
     "react-fontawesome": "^1.7.1",
     "react-helmet": "^6.1.0",
