--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "rc-slider": "^9.7.4",
     "react": "^17.0.1",
     "react-copy-to-clipboard": "^5.0.4",
+    "react-device-detect": "^2.1.2",
     "react-dom": "^17.0.1",
     "react-fontawesome": "^1.7.1",
     "react-helmet": "^6.1.0",
