--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "buffer": "^6.0.3",
     "crypto": "^1.0.1",
     "crypto-browserify": "^3.12.0",
+    "dangerously-set-html-content": "^1.0.9",
     "echarts": "^5.2.2",
     "echarts-for-react": "^3.0.2",
     "ethers": "^5.5.3",
@@ -86,6 +87,7 @@
     "wagmi": "^0.1.3"
   },
   "devDependencies": {
+    "html-loader": "^3.1.0",
     "prettier": "^2.4.1"
   },
   "keywords": [
