--- a/package.json
+++ b/package.json
@@ -87,10 +87,10 @@
     "svg-to-dataurl": "^1.0.0",
     "util": "^0.12.4",
     "validator": "^13.7.0",
-    "wagmi": "^0.1.3"
+    "wagmi": "^0.1.3",
+    "html-loader": "^3.1.0"
   },
   "devDependencies": {
-    "html-loader": "^3.1.0",
     "prettier": "^2.4.1"
   },
   "keywords": [
