--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "buffer": "^6.0.3",
     "crypto": "^1.0.1",
     "crypto-browserify": "^3.12.0",
+    "crypto-symbol": "^3.2.0",
     "dangerously-set-html-content": "^1.0.9",
     "echarts": "^5.2.2",
     "echarts-for-react": "^3.0.2",
@@ -42,7 +43,9 @@
     "gatsby-source-filesystem": "^4.1.0",
     "gatsby-transformer-sharp": "^4.1.0",
     "graphql": "^15.7.2",
+    "html-loader": "^3.1.0",
     "html-react-parser": "^1.4.4",
+    "https": "^1.0.0",
     "isomorphic-fetch": "^3.0.0",
     "jquery": "^3.6.0",
     "jwt-decode": "^3.1.2",
@@ -87,8 +90,7 @@
     "svg-to-dataurl": "^1.0.0",
     "util": "^0.12.4",
     "validator": "^13.7.0",
-    "wagmi": "^0.1.3",
-    "html-loader": "^3.1.0"
+    "wagmi": "^0.1.3"
   },
   "devDependencies": {
     "prettier": "^2.4.1"
@@ -98,7 +100,7 @@
   ],
   "license": "0BSD",
   "scripts": {
-    "build": "set NODE_OPTIONS=--max-old-space-size=8192 && gatsby build",
+    "build": "set NODE_OPTIONS=--max-old-space-size=4096 && gatsby build",
     "develop": "gatsby develop --port 4000",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "start": "gatsby develop",
