--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "echarts": "^5.2.2",
     "echarts-for-react": "^3.0.2",
     "ethers": "^5.5.3",
+    "fs": "^0.0.1-security",
     "gatsby": "^4.6.0",
     "gatsby-plugin-apollo": "^3.0.2",
     "gatsby-plugin-gatsby-cloud": "^4.1.0",
@@ -42,6 +43,7 @@
     "gatsby-plugin-styled-components": "^5.4.0",
     "gatsby-source-filesystem": "^4.1.0",
     "gatsby-transformer-sharp": "^4.1.0",
+    "glob": "^7.2.0",
     "graphql": "^15.7.2",
     "html-loader": "^3.1.0",
     "html-react-parser": "^1.4.4",
@@ -52,6 +54,7 @@
     "lodash": "^4.17.21",
     "node-sass": "^6.0.1",
     "npx-languages": "^1.0.2",
+    "path": "^0.12.7",
     "polyfill": "^0.1.0",
     "popper.js": "^1.16.1",
     "prop-types": "^15.7.2",
