--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/lab": "^5.0.0-alpha.61",
     "@mui/material": "^5.2.5",
     "@popperjs/core": "^2.11.0",
+    "apollo-upload-client": "^17.0.0",
     "axios": "^0.24.0",
     "babel-plugin-styled-components": "^2.0.2",
     "base64-cryptocurrency-icons": "^1.1.17",
