--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "subscriptions-transport-ws": "^0.11.0",
     "svg-to-dataurl": "^1.0.0",
     "terser-webpack-plugin": "^5.3.1",
+    "use-deep-compare-effect": "^1.8.1",
     "util": "^0.12.4",
     "validator": "^13.7.0",
     "wagmi": "^0.1.3"
