--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "terser-webpack-plugin": "^5.3.1",
     "use-deep-compare-effect": "^1.8.1",
     "util": "^0.12.4",
+    "uuid": "^8.3.2",
     "validator": "^13.7.0",
     "wagmi": "^0.1.3"
   },
