--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "react-redux": "^7.2.6",
     "react-select": "^5.2.1",
     "react-star-ratings": "^2.3.0",
+    "react-stripe-elements": "^6.1.2",
     "react-switch": "^6.0.0",
     "react-tabs": "^3.2.3",
     "react-tooltip": "^4.2.21",
