Payment / Stripe / Using the stripe elements now

--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@mui/lab": "^5.0.0-alpha.61",
     "@mui/material": "^5.2.5",
     "@popperjs/core": "^2.11.0",
+    "@stripe/react-stripe-js": "^1.7.0",
+    "@stripe/stripe-js": "^1.23.0",
     "apollo-upload-client": "^17.0.0",
     "axios": "^0.24.0",
     "babel-plugin-styled-components": "^2.0.2",
@@ -78,7 +80,6 @@
     "react-redux": "^7.2.6",
     "react-select": "^5.2.1",
     "react-star-ratings": "^2.3.0",
-    "react-stripe-elements": "^6.1.2",
     "react-switch": "^6.0.0",
     "react-tabs": "^3.2.3",
     "react-tooltip": "^4.2.21",
