--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "rc-slider": "^9.7.4",
     "react": "^17.0.1",
     "react-copy-to-clipboard": "^5.0.4",
+    "react-countdown-hook": "^1.1.1",
     "react-currency-conv": "^1.1.0",
     "react-device-detect": "^2.1.2",
     "react-dom": "^17.0.1",
