--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "base64-cryptocurrency-icons": "^1.1.17",
     "bootstrap": "^5.1.3",
     "buffer": "^6.0.3",
+    "coinpayments": "^2.1.3",
     "crypto": "^1.0.1",
     "crypto-browserify": "^3.12.0",
     "crypto-symbol": "^3.2.0",
@@ -52,6 +53,7 @@
     "html-loader": "^3.1.0",
     "html-react-parser": "^1.4.4",
     "https": "^1.0.0",
+    "https-browserify": "^1.0.0",
     "isomorphic-fetch": "^3.0.0",
     "jquery": "^3.6.0",
     "jwt-decode": "^3.1.2",
@@ -93,6 +95,7 @@
     "redux-thunk": "^2.4.1",
     "sass": "^1.43.4",
     "stream": "^0.0.2",
+    "stream-browserify": "^3.0.0",
     "styled-components": "^5.3.3",
     "subscriptions-transport-ws": "^0.11.0",
     "svg-to-dataurl": "^1.0.0",
