--- a/.prettierrc
+++ b/.prettierrc
@@ -2,5 +2,6 @@
     "tabWidth": 4,
     "useTabs": false,
     "semi": true,
-    "printWidth": 80
+    "printWidth": 80,
+    "arrowParens": "avoid"
 }
