--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "react-fontawesome": "^1.7.1",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.22.5",
+    "react-js-pagination": "^3.0.3",
     "react-lang-dropdown": "^1.0.4",
     "react-modal": "^3.14.4",
     "react-number-format": "^4.9.0",
