--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "https-browserify": "^1.0.0",
     "isomorphic-fetch": "^3.0.0",
     "jquery": "^3.6.0",
+    "js-cookie": "^3.0.1",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "node-sass": "^6.0.1",
