--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "graphql": "^15.7.2",
     "html-loader": "^3.1.0",
     "html-react-parser": "^1.4.4",
+    "http": "0.0.1-security",
     "https": "^1.0.0",
     "https-browserify": "^1.0.0",
     "isomorphic-fetch": "^3.0.0",
@@ -88,6 +89,7 @@
     "react-star-ratings": "^2.3.0",
     "react-switch": "^6.0.0",
     "react-tabs": "^3.2.3",
+    "react-to-print": "^2.14.4",
     "react-tooltip": "^4.2.21",
     "react-use-file-upload": "^0.9.1",
     "react-use-websocket": "^2.9.1",
