--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "gatsby-plugin-sass": "^5.1.0",
     "gatsby-plugin-sharp": "^4.1.0",
     "gatsby-plugin-styled-components": "^5.4.0",
+    "gatsby-plugin-use-query-params": "^1.0.1",
     "gatsby-source-filesystem": "^4.1.0",
     "gatsby-transformer-sharp": "^4.1.0",
     "glob": "^7.2.0",
@@ -105,6 +106,7 @@
     "svg-to-dataurl": "^1.0.0",
     "terser-webpack-plugin": "^5.3.1",
     "use-deep-compare-effect": "^1.8.1",
+    "use-query-params": "^1.2.3",
     "util": "^0.12.4",
     "uuid": "^8.3.2",
     "validator": "^13.7.0",
