--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "random-names-generator": "^1.0.2",
     "rc-slider": "^9.7.4",
     "react": "^17.0.1",
+    "react-code-input": "^3.10.1",
     "react-copy-to-clipboard": "^5.0.4",
     "react-countdown-hook": "^1.1.1",
     "react-currency-conv": "^1.1.0",
