--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "crypto-browserify": "^3.12.0",
     "crypto-symbol": "^3.2.0",
     "dangerously-set-html-content": "^1.0.9",
+    "dotenv": "^16.0.0",
     "echarts": "^5.2.2",
     "echarts-for-react": "^3.0.2",
     "ethers": "^5.6.1",
