--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "react-modal": "^3.14.4",
     "react-number-format": "^4.9.0",
     "react-phone-number-input": "^3.1.44",
+    "react-places-autocomplete": "^7.3.0",
     "react-qr-code": "^2.0.3",
     "react-redux": "^7.2.6",
     "react-select": "^5.2.1",
