--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -3,9 +3,6 @@
 
 name: Node.js CI
 
-
-  
-
 on:
   push:
     branches: [ main ]
@@ -15,17 +12,12 @@ jobs:
 
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [12.x, 14.x, 16.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-
     steps:
     - uses: actions/checkout@v3
-    - name: Use Node.js ${{ matrix.node-version }}
+    - name: Use Node.js 16.15.0
       uses: actions/setup-node@v3
       with:
-        node-version: ${{ matrix.node-version }}
+        node-version: "16.15.0"
         cache: 'npm'
     - run: npm install -g gatsby-cli
     - run: npm install
