--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "gatsby-plugin-use-query-params": "^1.0.1",
     "gatsby-plugin-webpack-bundle-analyser-v2": "^1.1.27",
     "gatsby-source-filesystem": "^4.1.0",
+    "gatsby-theme-material-ui": "^5.2.0",
     "gatsby-transformer-sharp": "^4.1.0",
     "glob": "^7.2.0",
     "graphql": "^15.7.2",
