--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "react": "^17.0.1",
     "react-code-input": "^3.10.1",
     "react-copy-to-clipboard": "^5.0.4",
+    "react-countdown": "^2.3.2",
     "react-countdown-hook": "^1.1.1",
     "react-currency-conv": "^1.1.0",
     "react-day-picker": "^7.4.10",
