fix: npm packages

--- a/package.json
+++ b/package.json
@@ -5,20 +5,12 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
-    "@apollo/client": "^3.4.17",
-    "@emotion/react": "^11.7.1",
-    "@emotion/styled": "^11.6.0",
-    "@fortawesome/fontawesome-free-regular": "^5.0.13",
-    "@fortawesome/fontawesome-svg-core": "^1.2.36",
-    "@fortawesome/free-solid-svg-icons": "^5.15.4",
-    "@fortawesome/react-fontawesome": "^0.1.16",
+    "@apollo/client": "^3.0.0",
     "@gatsbyjs/reach-router": "^1.3.6",
     "@iconify/react": "^3.1.0",
     "@mui/lab": "^5.0.0-alpha.61",
     "@mui/material": "^5.2.5",
-    "@popperjs/core": "^2.11.0",
     "@react-icons/all-files": "^4.1.0",
-    "@stdlib/string-truncate-middle": "^0.0.2",
     "@stripe/react-stripe-js": "^1.7.0",
     "@stripe/stripe-js": "^1.23.0",
     "apollo-upload-client": "^17.0.0",
@@ -27,7 +19,6 @@
     "base64-cryptocurrency-icons": "^1.1.17",
     "bootstrap": "^5.1.3",
     "buffer": "^6.0.3",
-    "coinpayments": "^2.1.3",
     "crypto": "^1.0.1",
     "crypto-browserify": "^3.12.0",
     "crypto-symbol": "^3.2.0",
@@ -38,25 +29,19 @@
     "ethers": "^5.6.1",
     "fs": "^0.0.1-security",
     "gatsby": "^4.14.0",
-    "gatsby-plugin-apollo": "^3.0.2",
     "gatsby-plugin-gatsby-cloud": "^4.1.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-image": "^2.1.0",
     "gatsby-plugin-manifest": "^4.1.0",
-    "gatsby-plugin-mdx": "^3.14.0",
     "gatsby-plugin-no-sourcemaps": "^4.14.0",
-    "gatsby-plugin-offline": "^5.1.0",
-    "gatsby-plugin-perf-budgets": "^0.0.18",
     "gatsby-plugin-react-helmet": "^5.1.0",
     "gatsby-plugin-sass": "^5.1.0",
     "gatsby-plugin-sharp": "^4.1.0",
     "gatsby-plugin-styled-components": "^5.4.0",
     "gatsby-plugin-use-query-params": "^1.0.1",
-    "gatsby-plugin-webpack-bundle-analyser-v2": "^1.1.27",
-    "gatsby-source-filesystem": "^4.1.0",
+    "gatsby-source-filesystem": "^4.16.0",
     "gatsby-theme-material-ui": "^5.2.0",
-    "gatsby-transformer-sharp": "^4.1.0",
-    "glob": "^7.2.0",
+    "gatsby-transformer-sharp": "^4.16.0",
     "graphql": "^15.7.2",
     "html-loader": "^3.1.0",
     "html-react-parser": "^1.4.4",
@@ -67,10 +52,9 @@
     "jquery": "^3.6.0",
     "js-cookie": "^3.0.1",
     "jwt-decode": "^3.1.2",
-    "lmdb-store": "^1.6.14",
     "lodash": "^4.17.21",
     "node-polyfill-webpack-plugin": "^1.1.4",
-    "node-sass": "^6.0.1",
+    "node-sass": "^7.0.1",
     "npx-languages": "^1.0.2",
     "path": "^0.12.7",
     "polyfill": "^0.1.0",
@@ -84,15 +68,11 @@
     "react-copy-to-clipboard": "^5.0.4",
     "react-countdown": "^2.3.2",
     "react-countdown-hook": "^1.1.1",
-    "react-currency-conv": "^1.1.0",
     "react-day-picker": "^7.4.10",
     "react-device-detect": "^2.1.2",
     "react-dom": "^17.0.1",
-    "react-fontawesome": "^1.7.1",
     "react-helmet": "^6.1.0",
-    "react-hook-form": "^7.22.5",
-    "react-js-pagination": "^3.0.3",
-    "react-lang-dropdown": "^1.0.4",
+    "react-js-pagination": "^3.0.2",
     "react-modal": "^3.14.4",
     "react-number-format": "^4.9.0",
     "react-phone-number-input": "^3.1.44",
@@ -115,8 +95,8 @@
     "sass": "^1.43.4",
     "stream": "^0.0.2",
     "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
     "styled-components": "^5.3.3",
-    "subscriptions-transport-ws": "^0.11.0",
     "svg-to-dataurl": "^1.0.0",
     "terser-webpack-plugin": "^5.3.1",
     "use-deep-compare-effect": "^1.8.1",
@@ -129,7 +109,8 @@
   },
   "devDependencies": {
     "prettier": "^2.4.1",
-    "webpack": "^5.72.0"
+    "webpack": "^5.72.0",
+    "electron": "^19.0.3"
   },
   "keywords": [
     "gatsby"
