--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "@apollo/client": "^3.0.0",
+    "@emotion/styled": "^11.8.1",
     "@gatsbyjs/reach-router": "^1.3.6",
     "@iconify/react": "^3.1.0",
     "@mui/lab": "^5.0.0-alpha.61",
@@ -108,9 +109,9 @@
     "web3": "^1.7.3"
   },
   "devDependencies": {
+    "electron": "^19.0.3",
     "prettier": "^2.4.1",
-    "webpack": "^5.72.0",
-    "electron": "^19.0.3"
+    "webpack": "^5.72.0"
   },
   "keywords": [
     "gatsby"
