--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@iconify/react": "^3.1.0",
     "@mui/lab": "^5.0.0-alpha.61",
     "@mui/material": "^5.2.5",
+    "@mui/x-date-pickers": "^5.0.0-alpha.5",
     "@parcel/namer-default": "^2.6.0",
     "@react-icons/all-files": "^4.1.0",
     "@stripe/react-stripe-js": "^1.7.0",
