fix: env for amplify

--- a/.env.development.SAMPLE
+++ b/.env.development.SAMPLE
@@ -1,6 +1,6 @@
-API_BASE_URL=https://api.dev.nyyu.io
+GATSBY_API_BASE_URL=https://api.dev.nyyu.io
 # API_BASE_URL=http://localhost:5000
-SITE_URL=https://dev.nyyu.io
+GATSBY_SITE_URL=https://dev.nyyu.io
 
-CurrencyIconEndpoint=https://currencyfreaks.com/photos/flags
-ZENDESK_KEY=
+GATSBY_CurrencyIconEndpoint=https://currencyfreaks.com/photos/flags
+GATSBY_ZENDESK_KEY=
