--- a/package.json
+++ b/package.json
@@ -121,7 +121,7 @@
   ],
   "license": "0BSD",
   "scripts": {
-    "build": "set NODE_OPTIONS=--max-old-space-size=8192 && gatsby build",
+    "build": "set NODE_OPTIONS=--max-old-space-size=8192 NODE_ENV=production && gatsby build",
     "develop": "gatsby develop --port 4000",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "start": "set NODE_OPTIONS=--max-old-space-size=8192 NODE_ENV=development && gatsby develop",
