--- a/package.json
+++ b/package.json
@@ -122,9 +122,9 @@
   "license": "0BSD",
   "scripts": {
     "build": "set NODE_OPTIONS=--max-old-space-size=8192 NODE_ENV=production && gatsby build",
-    "develop": "gatsby develop -H 0.0.0.0 --port 4000",
+    "develop": "gatsby develop --port 4000",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
-    "start": "set NODE_OPTIONS=--max-old-space-size=8192 NODE_ENV=development && gatsby develop -H 0.0.0.0",
+    "start": "set NODE_OPTIONS=--max-old-space-size=8192 NODE_ENV=development && gatsby develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
