fix: referral update

--- a/.env.development.SAMPLE
+++ b/.env.development.SAMPLE
@@ -2,5 +2,6 @@ GATSBY_API_BASE_URL=https://api.dev.nyyu.io
 # API_BASE_URL=http://localhost:5000
 GATSBY_SITE_URL=https://dev.nyyu.io
 
+GATSBY_BINANCE_BASE_API=https://api.binance.com/api
 GATSBY_CurrencyIconEndpoint=https://currencyfreaks.com/photos/flags
 GATSBY_ZENDESK_KEY=
