--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
     "sass": "^1.43.4",
+    "sharp": "^0.30.7",
     "stream": "^0.0.2",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
