--- a/.env.development.SAMPLE
+++ b/.env.development.SAMPLE
@@ -5,3 +5,6 @@ GATSBY_SITE_URL=https://dev.nyyu.io
 GATSBY_BINANCE_BASE_API=https://api.binance.com/api
 GATSBY_CurrencyIconEndpoint=https://currencyfreaks.com/photos/flags
 GATSBY_ZENDESK_KEY=
+
+GATSBY_WITHDRAW_PUBLIC_KEY=publicfEIFJaFJEIF324KJ34Jfji93fjDF849DeifEfjaZ
+GATSBY_WITHDRAW_PRIVATE_KEY=privateEfji3499dfEf03jfDeifjaF2349f9fjlAFEr93R
