--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "isomorphic-fetch": "^3.0.0",
     "jquery": "^3.6.0",
     "js-cookie": "^3.0.1",
+    "jshashes": "^1.0.8",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "node-polyfill-webpack-plugin": "^1.1.4",
