--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "fs": "^0.0.1-security",
     "gatsby": "^4.14.0",
     "gatsby-plugin-gatsby-cloud": "^4.1.0",
+    "gatsby-plugin-google-analytics": "^4.22.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-image": "^2.1.0",
     "gatsby-plugin-manifest": "^4.1.0",
