--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "dependencies": {
     "@apollo/client": "^3.0.0",
     "@emotion/styled": "^11.8.1",
-    "@gatsbyjs/reach-router": "^1.3.6",
+    "@gatsbyjs/reach-router": "^1.3.10-no-navigate.4",
     "@iconify/react": "^3.1.0",
     "@mui/lab": "^5.0.0-alpha.61",
     "@mui/material": "^5.2.5",
@@ -17,7 +17,7 @@
     "@stripe/react-stripe-js": "^1.7.0",
     "@stripe/stripe-js": "^1.23.0",
     "apollo-upload-client": "^17.0.0",
-    "axios": "^0.24.0",
+    "axios": "^0.27.2",
     "babel-plugin-styled-components": "^2.0.2",
     "base64-cryptocurrency-icons": "^1.1.17",
     "bootstrap": "^5.1.3",
@@ -31,10 +31,12 @@
     "echarts-for-react": "^3.0.2",
     "ethers": "^5.6.1",
     "fs": "^0.0.1-security",
-    "gatsby": "^4.14.0",
+    "gatsby": "^4.22.0",
     "gatsby-plugin-gatsby-cloud": "^4.1.0",
     "gatsby-plugin-google-analytics": "^4.22.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
+    "gatsby-plugin-google-gtag": "^4.22.0",
+    "gatsby-plugin-hubspot": "^2.0.0",
     "gatsby-plugin-image": "^2.1.0",
     "gatsby-plugin-manifest": "^4.1.0",
     "gatsby-plugin-no-sourcemaps": "^4.14.0",
@@ -47,9 +49,9 @@
     "gatsby-source-filesystem": "^4.16.0",
     "gatsby-theme-material-ui": "^5.2.0",
     "gatsby-transformer-sharp": "^4.16.0",
-    "graphql": "^15.7.2",
-    "html-loader": "^3.1.0",
-    "html-react-parser": "^1.4.4",
+    "graphql": "^16.6.0",
+    "html-loader": "^4.1.0",
+    "html-react-parser": "^3.0.4",
     "http": "0.0.1-security",
     "https": "^1.0.0",
     "https-browserify": "^1.0.0",
@@ -59,7 +61,7 @@
     "jshashes": "^1.0.8",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
-    "node-polyfill-webpack-plugin": "^1.1.4",
+    "node-polyfill-webpack-plugin": "^2.0.1",
     "node-sass": "^7.0.1",
     "npx-languages": "^1.0.2",
     "path": "^0.12.7",
@@ -68,15 +70,15 @@
     "prop-types": "^15.7.2",
     "qrcode": "^1.5.0",
     "random-names-generator": "^1.0.2",
-    "rc-slider": "^9.7.4",
-    "react": "^17.0.1",
+    "rc-slider": "^10.0.1",
+    "react": "^18.2.0",
     "react-code-input": "^3.10.1",
     "react-copy-to-clipboard": "^5.0.4",
     "react-countdown": "^2.3.2",
     "react-countdown-hook": "^1.1.1",
-    "react-day-picker": "^7.4.10",
+    "react-day-picker": "^8.2.0",
     "react-device-detect": "^2.1.2",
-    "react-dom": "^17.0.1",
+    "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-js-pagination": "^3.0.2",
     "react-modal": "^3.14.4",
@@ -84,16 +86,16 @@
     "react-phone-number-input": "^3.1.44",
     "react-places-autocomplete": "^7.3.0",
     "react-qr-code": "^2.0.3",
-    "react-redux": "^7.2.6",
+    "react-redux": "^8.0.2",
     "react-select": "^5.2.1",
     "react-star-ratings": "^2.3.0",
-    "react-switch": "^6.0.0",
-    "react-tabs": "^3.2.3",
+    "react-switch": "^7.0.0",
+    "react-tabs": "^5.1.0",
     "react-to-print": "^2.14.4",
     "react-tooltip": "^4.2.21",
     "react-use-file-upload": "^0.9.1",
-    "react-use-websocket": "^2.9.1",
-    "react-webcam": "^6.0.0",
+    "react-use-websocket": "^4.2.0",
+    "react-webcam": "^7.0.1",
     "react-zendesk": "^0.1.13",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
@@ -107,15 +109,15 @@
     "svg-to-dataurl": "^1.0.0",
     "terser-webpack-plugin": "^5.3.1",
     "use-deep-compare-effect": "^1.8.1",
-    "use-query-params": "^1.2.3",
+    "use-query-params": "^2.1.0",
     "util": "^0.12.4",
     "uuid": "^8.3.2",
     "validator": "^13.7.0",
-    "wagmi": "^0.3.2",
+    "wagmi": "^0.6.4",
     "web3": "^1.7.3"
   },
   "devDependencies": {
-    "electron": "^19.0.3",
+    "electron": "^20.1.1",
     "prettier": "^2.4.1",
     "webpack": "^5.72.0"
   },
