--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "@gatsbyjs/reach-router": "^1.3.6",
     "@iconify/react": "^3.1.0",
     "@mui/lab": "^5.0.0-alpha.61",
-    "@mui/material": "^5.2.5",
-    "@mui/x-date-pickers": "^5.0.0-alpha.5",
+    "@mui/material": "^5.10.5",
+    "@mui/x-date-pickers": "^5.0.2",
     "@parcel/namer-default": "^2.6.0",
     "@react-icons/all-files": "^4.1.0",
     "@stripe/react-stripe-js": "^1.7.0",
@@ -31,22 +31,24 @@
     "echarts-for-react": "^3.0.2",
     "ethers": "^5.6.1",
     "fs": "^0.0.1-security",
-    "gatsby": "^4.14.0",
+    "gatsby": "^4.23.0",
     "gatsby-plugin-gatsby-cloud": "^4.1.0",
-    "gatsby-plugin-google-analytics": "^4.22.0",
+    "gatsby-plugin-gdpr-cookies": "^2.0.9",
+    "gatsby-plugin-google-analytics": "^4.23.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
-    "gatsby-plugin-image": "^2.1.0",
-    "gatsby-plugin-manifest": "^4.1.0",
-    "gatsby-plugin-no-sourcemaps": "^4.14.0",
-    "gatsby-plugin-react-helmet": "^5.1.0",
-    "gatsby-plugin-sass": "^5.1.0",
-    "gatsby-plugin-sharp": "^4.1.0",
-    "gatsby-plugin-styled-components": "^5.4.0",
+    "gatsby-plugin-google-tagmanager": "^4.23.0",
+    "gatsby-plugin-image": "^2.23.0",
+    "gatsby-plugin-manifest": "^4.23.0",
+    "gatsby-plugin-no-sourcemaps": "^4.23.0",
+    "gatsby-plugin-react-helmet": "^5.23.0",
+    "gatsby-plugin-sass": "^5.23.0",
+    "gatsby-plugin-sharp": "^4.23.0",
+    "gatsby-plugin-styled-components": "^5.23.0",
     "gatsby-plugin-use-query-params": "^1.0.1",
     "gatsby-plugin-webfonts": "^2.2.2",
-    "gatsby-source-filesystem": "^4.16.0",
-    "gatsby-theme-material-ui": "^5.2.0",
-    "gatsby-transformer-sharp": "^4.16.0",
+    "gatsby-source-filesystem": "^4.23.0",
+    "gatsby-theme-material-ui": "^5.3.0",
+    "gatsby-transformer-sharp": "^4.23.0",
     "graphql": "^15.7.2",
     "html-loader": "^3.1.0",
     "html-react-parser": "^1.4.4",
@@ -69,14 +71,14 @@
     "qrcode": "^1.5.0",
     "random-names-generator": "^1.0.2",
     "rc-slider": "^9.7.4",
-    "react": "^17.0.1",
+    "react": "^18.1.0",
     "react-code-input": "^3.10.1",
     "react-copy-to-clipboard": "^5.0.4",
     "react-countdown": "^2.3.2",
     "react-countdown-hook": "^1.1.1",
     "react-day-picker": "^7.4.10",
     "react-device-detect": "^2.1.2",
-    "react-dom": "^17.0.1",
+    "react-dom": "^18.1.0",
     "react-helmet": "^6.1.0",
     "react-js-pagination": "^3.0.2",
     "react-modal": "^3.14.4",
