--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "@apollo/client": "^3.0.0",
-    "@emotion/styled": "^11.8.1",
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
     "@gatsbyjs/reach-router": "^1.3.6",
     "@iconify/react": "^3.1.0",
+    "@material-ui/styles": "^4.11.5",
     "@mui/lab": "^5.0.0-alpha.61",
     "@mui/material": "^5.10.5",
     "@mui/x-date-pickers": "^5.0.2",
@@ -32,6 +34,7 @@
     "ethers": "^5.6.1",
     "fs": "^0.0.1-security",
     "gatsby": "^4.23.0",
+    "gatsby-plugin-emotion": "^7.23.0",
     "gatsby-plugin-gatsby-cloud": "^4.1.0",
     "gatsby-plugin-gdpr-cookies": "^2.0.9",
     "gatsby-plugin-google-analytics": "^4.23.0",
