--- a/package.json
+++ b/package.json
@@ -37,9 +37,10 @@
     "gatsby-plugin-emotion": "^7.23.0",
     "gatsby-plugin-gatsby-cloud": "^4.1.0",
     "gatsby-plugin-gdpr-cookies": "^2.0.9",
-    "gatsby-plugin-google-analytics": "^4.23.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
+    "gatsby-plugin-google-gtag": "^4.24.0",
     "gatsby-plugin-google-tagmanager": "^4.23.0",
+    "gatsby-plugin-hubspot": "^2.0.0",
     "gatsby-plugin-image": "^2.23.0",
     "gatsby-plugin-manifest": "^4.23.0",
     "gatsby-plugin-no-sourcemaps": "^4.23.0",
