--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "rc-slider": "^9.7.4",
     "react": "^18.1.0",
     "react-code-input": "^3.10.1",
+    "react-cookie-consent": "^8.0.1",
     "react-copy-to-clipboard": "^5.0.4",
     "react-countdown": "^2.3.2",
     "react-countdown-hook": "^1.1.1",
