--- a/package.json
+++ b/package.json
@@ -5,125 +5,118 @@
   "version": "1.0.0",
   "author": "NYYU UAB",
   "dependencies": {
-    "@apollo/client": "^3.0.0",
-    "@emotion/react": "^11.10.4",
-    "@emotion/styled": "^11.10.4",
-    "@gatsbyjs/reach-router": "^1.3.6",
-    "@iconify/react": "^3.1.0",
-    "@material-ui/styles": "^4.11.5",
-    "@mui/lab": "^5.0.0-alpha.61",
-    "@mui/material": "^5.10.5",
-    "@mui/x-date-pickers": "^5.0.2",
-    "@parcel/namer-default": "^2.6.0",
+    "@apollo/client": "^3.9.5",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
+    "@gatsbyjs/reach-router": "^2.0.1",
+    "@iconify/react": "^4.1.1",
+    "@mui/lab": "^5.0.0-alpha.166",
+    "@mui/material": "^5.15.11",
+    "@mui/x-date-pickers": "^6.19.6",
+    "@parcel/namer-default": "^2.12.0",
     "@react-icons/all-files": "^4.1.0",
-    "@stripe/react-stripe-js": "^1.7.0",
-    "@stripe/stripe-js": "^1.23.0",
-    "apollo-upload-client": "^17.0.0",
-    "axios": "^0.24.0",
-    "babel-plugin-styled-components": "^2.0.2",
-    "base64-cryptocurrency-icons": "^1.1.17",
-    "bootstrap": "^5.1.3",
+    "@stripe/react-stripe-js": "^2.5.1",
+    "@stripe/stripe-js": "^3.0.6",
+    "apollo-upload-client": "^18.0.1",
+    "axios": "^1.6.7",
+    "babel-plugin-styled-components": "^2.1.4",
+    "base64-cryptocurrency-icons": "^1.1.20",
+    "bootstrap": "^5.3.3",
     "buffer": "^6.0.3",
     "crypto": "^1.0.1",
     "crypto-browserify": "^3.12.0",
-    "crypto-symbol": "^3.2.0",
-    "dangerously-set-html-content": "^1.0.9",
-    "dotenv": "^16.0.0",
-    "echarts": "^5.3.2",
+    "crypto-symbol": "^3.6.0",
+    "dangerously-set-html-content": "^1.1.0",
+    "dotenv": "^16.4.5",
+    "echarts": "^5.5.0",
     "echarts-for-react": "^3.0.2",
-    "ethers": "^5.6.1",
+    "ethers": "^6.11.1",
     "fs": "^0.0.1-security",
-    "gatsby": "^4.23.0",
-    "gatsby-plugin-emotion": "^7.23.0",
-    "gatsby-plugin-gatsby-cloud": "^4.1.0",
-    "gatsby-plugin-gdpr-cookies": "^2.0.9",
+    "gatsby": "^5.13.3",
+    "gatsby-plugin-emotion": "^8.13.1",
+    "gatsby-plugin-gatsby-cloud": "^5.13.1",
     "gatsby-plugin-google-fonts": "^1.0.1",
-    "gatsby-plugin-google-gtag": "^4.24.0",
-    "gatsby-plugin-google-tagmanager": "^4.23.0",
-    "gatsby-plugin-hubspot": "^2.0.0",
-    "gatsby-plugin-image": "^2.23.0",
-    "gatsby-plugin-manifest": "^4.23.0",
-    "gatsby-plugin-no-sourcemaps": "^4.23.0",
-    "gatsby-plugin-react-helmet": "^5.23.0",
-    "gatsby-plugin-sass": "^5.23.0",
-    "gatsby-plugin-sharp": "^4.23.0",
-    "gatsby-plugin-styled-components": "^5.23.0",
+    "gatsby-plugin-google-tagmanager": "^5.13.1",
+    "gatsby-plugin-image": "^3.13.1",
+    "gatsby-plugin-manifest": "^5.13.1",
+    "gatsby-plugin-no-sourcemaps": "^5.13.0",
+    "gatsby-plugin-react-helmet": "^6.13.1",
+    "gatsby-plugin-sass": "^6.13.1",
+    "gatsby-plugin-styled-components": "^6.13.1",
     "gatsby-plugin-use-query-params": "^1.0.1",
-    "gatsby-plugin-webfonts": "^2.2.2",
-    "gatsby-source-filesystem": "^4.23.0",
-    "gatsby-theme-material-ui": "^5.3.0",
-    "gatsby-transformer-sharp": "^4.23.0",
-    "graphql": "^15.7.2",
-    "html-loader": "^3.1.0",
-    "html-react-parser": "^1.4.4",
+    "gatsby-plugin-webfonts": "^2.3.2",
+    "gatsby-source-filesystem": "^5.13.1",
+    "graphql": "^16.8.1",
+    "html-loader": "^5.0.0",
+    "html-react-parser": "^5.1.8",
     "http": "0.0.1-security",
     "https": "^1.0.0",
     "https-browserify": "^1.0.0",
     "isomorphic-fetch": "^3.0.0",
-    "jquery": "^3.6.0",
-    "js-cookie": "^3.0.1",
+    "jquery": "^3.7.1",
+    "js-cookie": "^3.0.5",
     "jshashes": "^1.0.8",
-    "jwt-decode": "^3.1.2",
+    "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
-    "node-polyfill-webpack-plugin": "^1.1.4",
-    "node-sass": "^7.0.1",
+    "node-polyfill-webpack-plugin": "^3.0.0",
+    "node-sass": "^9.0.0",
     "npx-languages": "^1.0.2",
+    "object.assign": "^4.1.5",
     "path": "^0.12.7",
     "polyfill": "^0.1.0",
     "popper.js": "^1.16.1",
-    "prop-types": "^15.7.2",
-    "qrcode": "^1.5.0",
+    "prop-types": "^15.8.1",
+    "qrcode": "^1.5.3",
     "random-names-generator": "^1.0.2",
-    "rc-slider": "^9.7.4",
-    "react": "^18.1.0",
+    "rc-slider": "^10.5.0",
+    "react": "^18.2.0",
     "react-code-input": "^3.10.1",
-    "react-cookie-consent": "^8.0.1",
-    "react-copy-to-clipboard": "^5.0.4",
-    "react-countdown": "^2.3.2",
-    "react-countdown-hook": "^1.1.1",
-    "react-day-picker": "^7.4.10",
-    "react-device-detect": "^2.1.2",
-    "react-dom": "^18.1.0",
+    "react-cookie-consent": "^9.0.0",
+    "react-copy-to-clipboard": "^5.1.0",
+    "react-countdown": "^2.3.5",
+    "react-countdown-hook": "^1.1.3",
+    "react-day-picker": "^8.10.0",
+    "react-device-detect": "^2.2.3",
+    "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
-    "react-js-pagination": "^3.0.2",
-    "react-modal": "^3.14.4",
-    "react-number-format": "^4.9.0",
-    "react-phone-number-input": "^3.1.44",
+    "react-js-pagination": "^3.0.3",
+    "react-modal": "^3.16.1",
+    "react-number-format": "^5.3.3",
+    "react-phone-number-input": "^3.3.9",
     "react-places-autocomplete": "^7.3.0",
-    "react-qr-code": "^2.0.3",
-    "react-redux": "^7.2.6",
-    "react-select": "^5.2.1",
+    "react-qr-code": "^2.0.12",
+    "react-redux": "^9.1.0",
+    "react-select": "^5.8.0",
     "react-star-ratings": "^2.3.0",
-    "react-switch": "^6.0.0",
-    "react-tabs": "^3.2.3",
-    "react-to-print": "^2.14.4",
-    "react-tooltip": "^4.2.21",
-    "react-use-file-upload": "^0.9.1",
-    "react-use-websocket": "^2.9.1",
-    "react-webcam": "^6.0.0",
+    "react-switch": "^7.0.0",
+    "react-tabs": "^6.0.2",
+    "react-to-print": "^2.15.1",
+    "react-tooltip": "^5.26.3",
+    "react-use-file-upload": "^0.9.5",
+    "react-use-websocket": "^4.8.1",
+    "react-webcam": "^7.2.0",
     "react-zendesk": "^0.1.13",
-    "redux": "^4.1.2",
-    "redux-devtools-extension": "^2.13.9",
-    "redux-thunk": "^2.4.1",
-    "sass": "^1.43.4",
-    "sharp": "^0.30.7",
+    "redux": "^5.0.1",
+    "redux-thunk": "^3.1.0",
+    "sass": "^1.71.1",
+    "sharp": "^0.33.2",
     "stream": "^0.0.2",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
-    "styled-components": "^5.3.3",
+    "styled-components": "^6.1.8",
     "svg-to-dataurl": "^1.0.0",
-    "terser-webpack-plugin": "^5.3.1",
+    "terser-webpack-plugin": "^5.3.10",
     "use-deep-compare-effect": "^1.8.1",
-    "use-query-params": "^1.2.3",
-    "util": "^0.12.4",
-    "uuid": "^8.3.2",
-    "validator": "^13.7.0",
-    "wagmi": "^0.3.2",
-    "web3": "^1.7.3"
+    "use-query-params": "^2.2.1",
+    "util": "^0.12.5",
+    "uuid": "^9.0.1",
+    "validator": "^13.11.0",
+    "wagmi": "^2.5.7",
+    "web3": "^4.5.0"
   },
   "devDependencies": {
-    "prettier": "^2.4.1",
-    "webpack": "^5.72.0"
+    "prettier": "^3.2.5",
+    "webpack": "^5.90.3"
   },
   "keywords": [
     "gatsby"
