--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "@gatsbyjs/reach-router": "^2.0.1",
     "@iconify/react": "^4.1.1",
     "@mui/lab": "^5.0.0-alpha.167",
-    "@mui/material": "^5.15.12",
-    "@mui/x-date-pickers": "^8.10.0",
+    "@mui/material": "^5.8.6",
+    "@mui/x-date-pickers": "^6.19.6",
     "@parcel/namer-default": "^2.12.0",
     "@react-icons/all-files": "^4.1.0",
+    "@reduxjs/toolkit": "^2.2.1",
     "@stripe/react-stripe-js": "^2.5.1",
     "@stripe/stripe-js": "^3.0.7",
     "@tanstack/query-core": "^5.25.0",
@@ -44,11 +45,14 @@
     "gatsby-plugin-no-sourcemaps": "^5.13.0",
     "gatsby-plugin-react-helmet": "^6.13.1",
     "gatsby-plugin-sass": "^6.13.1",
+    "gatsby-plugin-sharp": "^5.13.1",
     "gatsby-plugin-styled-components": "^6.13.1",
     "gatsby-plugin-use-query-params": "^1.0.1",
     "gatsby-plugin-webfonts": "^2.3.2",
     "gatsby-source-filesystem": "^5.13.1",
+    "gatsby-transformer-sharp": "^5.13.1",
     "graphql": "^16.8.1",
+    "hash-wasm": "^4.11.0",
     "html-loader": "^5.0.0",
     "html-react-parser": "^5.1.8",
     "http": "0.0.1-security",
@@ -71,14 +75,14 @@
     "qrcode": "^1.5.3",
     "random-names-generator": "^1.0.2",
     "rc-slider": "^10.5.0",
-    "react": "^18.2.0",
+    "react": "^17.0.0 || ^18.0.0",
     "react-code-input": "^3.10.1",
     "react-cookie-consent": "^9.0.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-countdown": "^2.3.5",
     "react-countdown-hook": "^1.1.3",
     "react-device-detect": "^2.2.3",
-    "react-dom": "^18.2.0",
+    "react-dom": "^17.0.0 || ^18.0.0",
     "react-helmet": "^6.1.0",
     "react-js-pagination": "^3.0.3",
     "react-modal": "^3.16.1",
@@ -98,9 +102,9 @@
     "react-webcam": "^7.2.0",
     "react-zendesk": "^0.1.13",
     "redux": "^5.0.1",
+    "redux-logger": "^3.0.6",
     "redux-thunk": "^3.1.0",
     "sass": "^1.71.1",
-    "sharp": "^0.33.2",
     "stream": "^0.0.2",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
@@ -116,6 +120,12 @@
     "wagmi": "^2.5.7",
     "web3": "^4.5.0"
   },
+  "peerDependencies": {
+    "@mui/material": "^5.8.6",
+    "@mui/system": "^5.8.0",
+    "react": "^17.0.0 || ^18.0.0",
+    "react-dom": "^17.0.0 || ^18.0.0"
+  },
   "devDependencies": {
     "object.assign": "^4.1.5",
     "prettier": "^3.2.5",
@@ -126,10 +136,10 @@
   ],
   "license": "0BSD",
   "scripts": {
-    "build": "set NODE_OPTIONS=--max-old-space-size=8192 NODE_ENV=production && gatsby build",
+    "build": "gatsby build",
     "develop": "gatsby develop --port 4000",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
-    "start": "set NODE_OPTIONS=--max-old-space-size=8192 NODE_ENV=development && gatsby develop -H 0.0.0.0",
+    "start": "gatsby develop -H 0.0.0.0",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
