--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@gatsbyjs/reach-router": "^2.0.1",
     "@iconify/react": "^4.1.1",
     "@mui/lab": "^5.0.0-alpha.167",
-    "@mui/material": "^5.15.12",
+    "@mui/material": "^5.8.6",
     "@mui/x-date-pickers": "^6.19.6",
     "@parcel/namer-default": "^2.12.0",
     "@react-icons/all-files": "^4.1.0",
@@ -74,14 +74,14 @@
     "qrcode": "^1.5.3",
     "random-names-generator": "^1.0.2",
     "rc-slider": "^10.5.0",
-    "react": "^18.2.0",
+    "react": "^17.0.0 || ^18.0.0",
     "react-code-input": "^3.10.1",
     "react-cookie-consent": "^9.0.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-countdown": "^2.3.5",
     "react-countdown-hook": "^1.1.3",
     "react-device-detect": "^2.2.3",
-    "react-dom": "^18.2.0",
+    "react-dom": "^17.0.0 || ^18.0.0",
     "react-helmet": "^6.1.0",
     "react-js-pagination": "^3.0.3",
     "react-modal": "^3.16.1",
@@ -90,6 +90,7 @@
     "react-places-autocomplete": "^7.3.0",
     "react-qr-code": "^2.0.12",
     "react-redux": "^9.1.0",
+    "react-router-dom": "^6.22.3",
     "react-select": "^5.8.0",
     "react-star-ratings": "^2.3.0",
     "react-switch": "^7.0.0",
