--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -21,10 +21,17 @@ jobs:
           rm -f .env
           rm -rf secret-folder-if-any
 
+      - name: Debug token presence
+        run: |
+          echo "Token length: ${#PUBLIC_REPO_TOKEN}"
+        env:
+          PUBLIC_REPO_TOKEN: ${{ secrets.PUBLIC_REPO_TOKEN }}
+
       - name: Push to public repo
+        env:
+          PAT: ${{ secrets.PUBLIC_REPO_TOKEN }}
         run: |
           git config --global user.email "info@orb.group"
           git config --global user.name "golsharifi"
-          git remote add public https://x-access-token:${{ secrets.PUBLIC_REPO_TOKEN }}@github.com/optitor/public.nyyu.io.git
+          git remote add public https://x-access-token:${PAT}@github.com/optitor/public.nyyu.io.git
           git push --force public HEAD:main
-          
